fix: player width on smaller screen

--- a/src/components/sound-player/sound-player.scss
+++ b/src/components/sound-player/sound-player.scss
@@ -2,7 +2,7 @@
 	background: transparent;
 	box-shadow: none;
 	padding: 0;
-	min-width: 257px;
+	min-width: 240px;
 
 	@media (min-width: 580px) {
 		min-width: 300px;
